Transferred from the Adobe Open Source Subversion Repository
Revision: 9943
Author:   jszeto@adobe.com
Date:     2009-09-02T22:20:02.483403Z

Log Message: 
-----------
Border style defaults

http://bugs.adobe.com/jira/browse/SDK-22955 - Border's default value of backgroundImageResizeMode should be "scale"
http://bugs.adobe.com/jira/browse/SDK-22960 - Border's default value of dropShadowVisible should be set to false

Updated defaults.css global style selector. 

QE notes: None
Doc notes: None
Bugs: SDK-22955, SDK-22960
Reviewer: Glenn
Tests run: Checkintests
Is noteworthy for integration: No

Modified Paths:
--------------
/flex/sdk/trunk/frameworks/projects/spark/defaults.css

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274847 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -156,10 +156,12 @@ global
 {
     /* Looks */
     /* color: #000000; */
+    backgroundImageResizeMode : "scale";
     baseColor: #CCCCCC;
     borderVisible : true;
     borderWeight : 1;
     contentBackgroundColor: #FFFFFF;
+    dropShadowVisible : false;
     rollOverColor: #CEDBEF;
     focusColor: #70B2EE;
     symbolColor: #000000;
