Transferred from the Adobe Open Source Subversion Repository
Revision: 10028
Author:   gruehle@adobe.com
Date:     2009-09-04T18:52:57.040613Z

Log Message: 
-----------
Fixed merge issue regarding default value for dropShadowVisible. This will fix the missing drop shadows on Spark Panel and DropDownList.

QE notes: -
Doc notes: -
Bugs: SDK-23027
Reviewer: Jason
Tests run: checkintests
Is noteworthy for integration: No

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/framework/defaults.css</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/defaults.css</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274849 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -49,6 +49,7 @@ CheckBox
 
 DropDownList
 {
+    dropShadowVisible: true;
     skinClass: ClassReference("spark.skins.spark.DropDownListSkin");
 }
 
@@ -98,6 +99,7 @@ Panel
     borderAlpha: 0.5;
     borderColor: 0;
     cornerRadius: 0;
+    dropShadowVisible: true;
 	skinClass: ClassReference("spark.skins.spark.PanelSkin");
 }
 
@@ -173,7 +175,6 @@ global
     borderVisible : true;
     borderWeight : 1;
     contentBackgroundColor: #FFFFFF;
-    dropShadowVisible : false;
     rollOverColor: #CEDBEF;
     focusColor: #70B2EE;
     symbolColor: #000000;
