Transferred from the Adobe Open Source Subversion Repository
Revision: 10355
Author:   dsubrama@adobe.com
Date:     2009-09-17T20:50:21.870117Z

Log Message: 
-----------
Coordinated check-in of SDK and FXGUtils integration for the bitmap-related changes for FXG 2.0 compliancy. This includes several API changes documented below:

1. BitmapGraphic is now BitmapImage in FXG. All this requires is changing the mapping in fxg-manifest.xml
2. BitmapGraphic and BitmapFill's resizeMode property is renamed to fillMode
3. BitmapResizeMode const class is now named BitmapFillMode
4. BitmapFillMode's noScale enum is now called clip
5. Border's backgroundImageResizeMode style is now called backgroundImageFillMode 

QE notes: Joan's updated tests
Doc notes: Yes - the API renames needs to be reflected in the documentation 
Bugs: N/A
Reviewer: Evtim for SDK, Corey for FXGUtils stuff
Tests run: FXG static and runtime 
Is noteworthy for integration: Yes

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/modules/fxgutils/src/java/com/adobe/internal/fxg/dom/fills/BitmapFillNode.java</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/fxgutils/src/java/com/adobe/internal/fxg/dom/text/AbstractTextNode.java</path>
<path kind="file" action="D">/flex/sdk/trunk/modules/fxgutils/src/java/com/adobe/internal/fxg/dom/types/FirstBaselineOffset.java</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/fxgutils/src/java/com/adobe/internal/fxg/dom/richtext/AbstractRichTextLeafNode.java</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/projects/framework/src/mx/graphics/BitmapResizeMode.as</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/fxgutils/src/java/com/adobe/internal/fxg/dom/types/ResizeMode.java</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/asdoc/en_US/spark/primitives/examples/BitmapImageExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/fxgutils/src/java/com/adobe/internal/f

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -171,7 +171,7 @@ global
 {
     /* Looks */
     /* color: #000000; */
-    backgroundImageResizeMode : "scale";
+    backgroundImageFillMode : "scale";
     baseColor: #CCCCCC;
     borderVisible : true;
     borderWeight : 1;
