Transferred from the Adobe Open Source Subversion Repository
Revision: 10600
Author:   egeorgie@adobe.com
Date:     2009-09-25T20:38:22.707554Z

Log Message: 
-----------
Adding drag support to List - dragInitiator. Currently can't drop the dragged items yet.

- ListItemDragProxy class - default drag proxy for List (through a new style "dragIndicatorClass")
- Added dragEnabled, dragMoveEnabled properties to List

QE notes: Dragging from List is now possible. Dropping to different containers will come with subsequent check-in.
Doc notes: None
Bugs: None
Reviewer: Ryan
Tests run: checkintests
Is noteworthy for integration: No

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/src/spark/components/List.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/spark-manifest.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/defaults.css</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/spark/src/spark/components/supportClasses/ListItemDragProxy.as</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274855 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -88,6 +88,7 @@ HSlider
 List
 {
 	skinClass: ClassReference("spark.skins.spark.ListSkin");
+    dragIndicatorClass: ClassReference("spark.components.supportClasses.ListItemDragProxy");
 }
 
 MuteButton
