Transferred from the Adobe Open Source Subversion Repository
Revision: 10951
Author:   klin@adobe.com
Date:     2009-10-09T17:15:44.211985Z

Log Message: 
-----------
TitleWindow initial checkin. This is the spark equivalent of the mx:TitleWindow. One major difference is that we support a new skinstate called active. In this state, the titlebar of the window that is in focus or if one of that window's children is in focus.

-Added TitleWindow component to spark framework.
-Added new TitleWindowBoundsEvent to define events when you drag a TitleWindow.
-Added TitleWindow default skin and wireframe skin.
-Included TitleWindow to manifests and stylesheets.
-Added TitleWindow checkin test.
-Modified Panel's controlBarGroupProperties and related constants to be mx_internal in order for titlewindow to have the correct state when the controlBar is present and visible.
-Added ASDoc example for TW.
-Added icon for FB integration.
-Changed mx:TitleWindow's Alternative metadata to point to the spark TitleWindow.

SDK-23648 - small cosmetic fix on TitleWindow skin for titleDisplay overlapping with the closeButton

QE notes: TitleWindow ready for testing.
Doc notes: Yes
Bugs: SDK-23648
Reviewer: Ryan
Tests run: checkintests
Is noteworthy for integration: Yes

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/src/SparkClasses.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/spark/src/spark/components/TitleWindow.png</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/spark/src/spark/skins/spark/TitleWindowSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/wireframe/src/WireframeClasses.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/wireframe/src/spark/skins/wireframe/TitleWindowSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/defaults-3.0.0.css</path>
<path kind="file" action="M">/flex/sd

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -144,6 +144,15 @@ TextInput
 	skinClass: ClassReference("spark.skins.spark.TextInputSkin");
 }
 
+TitleWindow
+{
+	borderAlpha: 0.5;
+	borderColor: 0;
+	cornerRadius: 0;
+	dropShadowVisible: true;
+	skinClass: ClassReference("spark.skins.spark.TitleWindowSkin");
+}
+
 ToggleButton
 {
 	skinClass: ClassReference("spark.skins.spark.ToggleButtonSkin");
