--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -48,6 +48,15 @@ CheckBox
     skinClass: ClassReference("spark.skins.spark.CheckBoxSkin");
 }
 
+ComboBox
+{
+    paddingBottom: 3;
+    paddingLeft: 3;
+    paddingRight: 3;
+    paddingTop: 5;
+    skinClass: ClassReference("spark.skins.spark.ComboBoxSkin");
+}
+
 DropDownList
 {
     dropShadowVisible: true;
