Transferred from the Adobe Open Source Subversion Repository
Revision: 11444
Author:   hmuller@adobe.com
Date:     2009-11-04T20:22:02.152655Z

Log Message: 
-----------
Initial commit of the TabBar component.  ButtonBar and TabBar share a new base class called ButtonBarBase.  

QE notes: tests for TabBar are TBD
Doc notes: Please check the new TabBar, ButtonBarBase ASDoc
Bugs:
Reviewer: Alex, Glenn
Tests run: ButtonBar Mustella tests pass 
Is noteworthy for integration:

Modified Paths:
--------------
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/spark/src/spark/skins/spark/TabBarButtonSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/src/SparkClasses.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/spark/src/spark/components/TabBar.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/spark/src/spark/skins/spark/TabBarSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/spark-manifest.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/defaults.css</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/src/spark/components/ButtonBar.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/spark/src/spark/components/supportClasses/ButtonBarBase.as</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274860 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -135,6 +135,12 @@ Spinner
     skinClass: ClassReference("spark.skins.spark.SpinnerSkin");    
 }
 
+TabBar
+{
+    skinClass: ClassReference("spark.skins.spark.TabBarSkin");
+    cornerRadius: 4;
+}
+
 TextArea
 {
     paddingBottom: 3;
