--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -178,6 +178,11 @@ VideoPlayer
     skinClass: ClassReference("spark.skins.spark.VideoPlayerSkin");
 }
 
+VideoPlayer2
+{
+    skinClass: ClassReference("spark.skins.spark.VideoPlayerSkin2");
+}
+
 VolumeBar
 {
     skinClass: ClassReference("spark.skins.spark.mediaClasses.normal.VolumeBarSkin");
