--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -95,6 +95,7 @@ List
 {
 	skinClass: ClassReference("spark.skins.spark.ListSkin");
     dragIndicatorClass: ClassReference("spark.components.supportClasses.ListItemDragProxy");
+	dropIndicatorSkin: ClassReference("spark.skins.spark.ListDropIndicator");
 }
 
 MuteButton
