Transferred from the Adobe Open Source Subversion Repository
Revision: 12068
Author:   jszeto@adobe.com
Date:     2009-11-20T23:12:16.551186Z

Log Message: 
-----------
Renaming Border to BorderContainer and BorderSkin to BorderContainerSkin

Updated the files, stylesheet, manifest file and the basicTest tests.

QE notes: tests need updating
Doc notes: Docs need updating
Bugs: SDK-24300
Reviewer: Glenn
Tests run: checkintests
Is noteworthy for integration: Yes. Tests and tools will be impacted.

Modified Paths:
--------------
<path kind="file" copyfrom-path="/flex/sdk/trunk/frameworks/projects/spark/src/spark/skins/spark/BorderSkin.as" copyfrom-rev="12021" action="A">/flex/sdk/trunk/frameworks/projects/spark/src/spark/skins/spark/BorderContainerSkin.as</path>
<path kind="file" copyfrom-path="/flex/sdk/trunk/frameworks/tests/basicTests/spark/scripts/BorderTestScript.mxml" copyfrom-rev="12021" action="A">/flex/sdk/trunk/frameworks/tests/basicTests/spark/scripts/BorderContainerTestScript.mxml</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/tests/basicTests/spark/views/BorderTests.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/src/SparkClasses.as</path>
<path kind="file" copyfrom-path="/flex/sdk/trunk/frameworks/tests/basicTests/spark/views/BorderTests.mxml" copyfrom-rev="12021" action="A">/flex/sdk/trunk/frameworks/tests/basicTests/spark/views/BorderContainerTests.mxml</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/projects/spark/asdoc/en_US/spark/components/examples/BorderExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/spark-manifest.xml</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/projects/spark/src/spark/components/Border.as</path>
<path kind="file" copyfrom-path="/flex/sdk/trunk/frameworks/projects/spark/asdoc/en_US/spark/components/examples/BorderExample.mxml" copyfrom-rev="12021" action="A">/flex/sdk/trunk/frameworks/projects/spark/asdoc/en_US/spark/co

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -21,12 +21,12 @@ Application
     skinClass: ClassReference("spark.skins.spark.ApplicationSkin");
 }
 
-Border
+BorderContainer
 {
     backgroundColor: #FFFFFF;
     borderStyle : "solid"; 
     cornerRadius: 0;
-    skinClass: ClassReference("spark.skins.spark.BorderSkin");
+    skinClass: ClassReference("spark.skins.spark.BorderContainerSkin");
 }
 
 Button
