Transferred from the Adobe Open Source Subversion Repository
Revision: 12074
Author:   gruehle@adobe.com
Date:     2009-11-21T01:02:03.186839Z

Log Message: 
-----------
Change baseColor to chromeColor.

QE notes: Tests need to be updated.
Doc notes: ASDoc has been updated. Other docs need updating.
Bugs: SDK-24298
Reviewer: Ely
Tests run: checkintests, qe cyclone
Is noteworthy for integration: Yes

Modified Paths:
--------------
112 paths were modified

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274867 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -201,7 +201,7 @@ global
     /* Looks */
     /* color: #000000; */
     backgroundImageFillMode : "scale";
-    baseColor: #CCCCCC;
+    chromeColor: #CCCCCC;
     borderVisible : true;
     borderWeight : 1;
     contentBackgroundColor: #FFFFFF;
