Transferred from the Adobe Open Source Subversion Repository
Revision: 14405
Author:   jszeto@adobe.com
Date:     2010-02-25T00:22:17.643962Z

Log Message: 
-----------
Merging 14403 from 4.x to trunk

VideoPlayer mirroring bug fix

http://bugs.adobe.com/jira/browse/SDK-25471 - Spark VideoPlayer control shouldn’t reverse control buttons when changing layoutDirection

VideoPlayer should not mirror, so I set layoutDirection = ltr in the CSS type selector. Fixed a bug where the VideoPlayer is mirrored when it goes full screen. Added logic to UIComponent to invalidate the layoutDirection if the parent has been changed. 

Set layoutDirection = ltr on the play button and volume bar so that they don't get reversed if layoutDirection = rtl on the VideoPlayer. 

QE notes: none
Doc notes: none
Bugs: SDK-25471
Reviewer: Hans
Tests run: checkintests
Is noteworthy for integration: no

Modified Paths:
--------------
<path kind="dir" action="M">/flex/sdk/trunk</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/defaults.css</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/framework/src/mx/core/UIComponent.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/src/spark/skins/spark/VideoPlayerSkin.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274872 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -194,6 +194,7 @@ VideoDisplay
 VideoPlayer
 {
     dropShadowVisible: true;
+    layoutDirection: "ltr";
     skinClass: ClassReference("spark.skins.spark.VideoPlayerSkin");
 }
 
