Transferred from the Adobe Open Source Subversion Repository
Revision: 16331
Author:   jszeto@adobe.com
Date:     2010-05-27T00:20:51.292460Z

Log Message: 
-----------
Form Bug Fixes

SDK-26517 - Form should take into account includeInLayout property when calculating baselineElementPosition

Added logic into Group to find the first element that has includeInLayout == true. 

SDK-26509 - Spark Form shows dual error strings in non-stacked layout

Removed error string from FormSkin. Created a StackedFormSKin skin which includes the error string. 

SDK-26499 - Spark Form skin should use errorStringDisplay skin part instead of errorStringText

Changed name to errorTextDisplay

SDK-26498 - Spark Form needs more padding around error strings

Added padding to the entire Form

SDK-26503 - Difficult to create custom Spark FormItem skin due to embedded required/error icon assets

Added new requiredIndicatorSource and errorIndicatorSource styles to FormItem. FormItem skins now grab the icons from these styles. Custom skin also have access to these icons. 

QE notes: Form layout has changed
Doc notes: none
Bugs: SDK-26517, SDK-26509, SDK-26499, SDK-26498, SDK-26503
Reviewer: Kevin
Tests run: checkintests
Is noteworthy for integration: no

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/src/SparkClasses.as</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/projects/spark/src/spark/skins/spark/assets/ErrorIndicator.png</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/src/spark/components/Group.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/defaults.css</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/src/spark/skins/spark/StackedFormItemSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/src/spark/skins

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -79,6 +79,8 @@ FormHeading
 
 FormItem
 {
+    errorIndicatorSource : Embed(source="assets/ErrorIndicator.png");
+    requiredIndicatorSource : Embed(source="assets/RequiredIndicator.png");
     skinClass : ClassReference("spark.skins.spark.FormItemSkin");
 }
 
