Transferred from the Adobe Open Source Subversion Repository
Revision: 16390
Author:   clucier@adobe.com
Date:     2010-06-02T00:31:33.544783Z

Log Message: 
-----------
PARB changes and bug fixes for Image and BitmapImage.

QE notes:  None
Doc notes:  None
Bugs: SDK-26596, SDK-26594, SDK-26561, SDK-26562, SDK-26567, SDK-26568, SDK-26571, SDK-26572, SDK-26575, SDK-26583, SDK-26584
Reviewer:  Ryan
Tests run:  Checkin
Is noteworthy for integration: No

Modified Paths:
--------------
<path kind="file" copyfrom-path="/flex/sdk/trunk/frameworks/projects/spark/src/spark/core/contentLoader/LoaderInvalidationEvent.as" copyfrom-rev="16350" action="A">/flex/sdk/trunk/frameworks/projects/spark/src/spark/events/LoaderInvalidationEvent.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/src/SparkClasses.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/spark-manifest.xml</path>
<path kind="file" copyfrom-path="/flex/sdk/trunk/frameworks/projects/spark/src/spark/core/contentLoader/IContentLoader.as" copyfrom-rev="16350" action="A">/flex/sdk/trunk/frameworks/projects/spark/src/spark/core/IContentLoader.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/defaults.css</path>
<path kind="file" copyfrom-path="/flex/sdk/trunk/frameworks/projects/spark/src/spark/core/contentLoader/ContentCache.as" copyfrom-rev="16350" action="A">/flex/sdk/trunk/frameworks/projects/spark/src/spark/core/ContentCache.as</path>
<path kind="dir" action="D">/flex/sdk/trunk/frameworks/projects/spark/src/spark/core/contentLoader</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/src/spark/components/Image.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/src/spark/skins/spark/ImageSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/src/spark/primitives/BitmapImage.as</path>
<path kind="file" copyfrom-path="/flex/sdk/trunk/frameworks/projects/spar

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -97,13 +97,15 @@ HSlider
 Image
 {
     skinClass: ClassReference("spark.skins.spark.ImageSkin");
+    enableLoadingState: false;
+    smoothingQuality: "default";
 }
 
 List
 {
-	skinClass: ClassReference("spark.skins.spark.ListSkin");
+    skinClass: ClassReference("spark.skins.spark.ListSkin");
     dragIndicatorClass: ClassReference("spark.components.supportClasses.ListItemDragProxy");
-	dropIndicatorSkin: ClassReference("spark.skins.spark.ListDropIndicator");
+    dropIndicatorSkin: ClassReference("spark.skins.spark.ListDropIndicator");
 }
 
 MuteButton
