Transferred from the Adobe Open Source Subversion Repository
Revision: 16489
Author:   clucier@adobe.com
Date:     2010-06-07T23:56:58.881239Z

Log Message: 
-----------
Merge revisions 16409 and 16410 from trunk.

Modified Paths:
--------------
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/primitives/BitmapImage.as</path>
<path kind="dir" action="M">/private/flex/sdk/branches/hero_private</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/framework/src/mx/graphics/BitmapSmoothingQuality.as</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/framework/src/mx/utils/LinkedList.as</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/defaults.css</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/core/ContentCache.as</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/components/Image.as</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274879 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -98,6 +98,7 @@ Image
 {
     skinClass: ClassReference("spark.skins.spark.ImageSkin");
     enableLoadingState: false;
+    showErrorSkin : false;
     smoothingQuality: "default";
 }
 
