Transferred from the Adobe Open Source Subversion Repository
Revision: 16517
Author:   jszeto@adobe.com
Date:     2010-06-10T03:58:45.049628Z

Log Message: 
-----------
Merged DataGrid and Tree from private branch

QE notes: none
Doc notes: none
Bugs: none
Reviewer: none
Tests run: checkintests
Is noteworthy for integration: no

Modified Paths:
--------------
<path kind="file" copyfrom-path="/private/flex/sdk/branches/flex4_5/frameworks/projects/spark/src/spark/components/IGridItemRenderer.as" copyfrom-rev="15909" action="A">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/components/IGridItemRenderer.as</path>
<path kind="file" copyfrom-path="/private/flex/sdk/branches/flex4_5/frameworks/projects/spark/src/spark/events/GridEvent.as" copyfrom-rev="16078" action="A">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/events/GridEvent.as</path>
<path kind="file" copyfrom-path="/private/flex/sdk/branches/flex4_5/frameworks/projects/spark/src/spark/components/supportClasses/GridDimensions.as" copyfrom-rev="15886" action="A">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/components/supportClasses/GridDimensions.as</path>
<path kind="file" copyfrom-path="/private/flex/sdk/branches/flex4_5/frameworks/projects/spark/src/spark/skins/spark/ColumnHeaderBarSkin.mxml" copyfrom-rev="16498" action="A">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/skins/spark/ColumnHeaderBarSkin.mxml</path>
<path kind="file" copyfrom-path="/private/flex/sdk/branches/flex4_5/frameworks/projects/spark/src/spark/events/GridSelectionEvent.as" copyfrom-rev="16226" action="A">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/events/GridSelectionEvent.as</path>
<path kind="file" copyfrom-path="/private/flex/sdk/branches/flex4_5/frameworks/projects/spark/src/spark/components/ColumnHeaderBar.png" copyfrom-rev="16498" action="A">/private/flex/sdk/branches/hero_private/framew

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -59,6 +59,11 @@ ComboBox
     skinClass: ClassReference("spark.skins.spark.ComboBoxSkin");
 }
 
+DataGrid
+{
+    skinClass: ClassReference("spark.skins.spark.DataGridSkin");
+}
+
 DropDownList
 {
     dropShadowVisible: true;
@@ -211,6 +216,11 @@ TitleWindow
 ToggleButton
 {
 	skinClass: ClassReference("spark.skins.spark.ToggleButtonSkin");
+}
+
+Tree
+{
+    skinClass: ClassReference("spark.skins.spark.DataGridSkin");
 }
 
 VideoDisplay
