Transferred from the Adobe Open Source Subversion Repository
Revision: 16767
Author:   cframpto@adobe.com
Date:     2010-07-01T13:00:43.351767Z

Log Message: 
-----------
The following changes apply to Spark DataGrid only.   Code reviews have been deferred until the implementation is closer to completion. 
 
Make the ColumnHeaderBar stretchCursor a style in defaults.css.  Even for Spark, cursors are styles.

Modified Paths:
--------------
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/components/ColumnHeaderBar.as</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/defaults.css</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274881 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -49,6 +49,11 @@ CheckBox
     skinClass: ClassReference("spark.skins.spark.CheckBoxSkin");
 }
 
+ColumnHeaderBar
+{
+    stretchCursor: Embed(source="Assets.swf",symbol="cursorStretch");
+}
+
 ComboBox
 {
     dropShadowVisible: true;
