Transferred from the Adobe Open Source Subversion Repository
Revision: 17388
Author:   klin@adobe.com
Date:     2010-08-19T19:08:29.269061Z

Log Message: 
-----------
Make ColumnHeaderBar buttons have a cornerRadius of 0.

QE notes: No
Doc notes: No
Bugs: SDK-27179
Reviewer: Carol
Tests run: checkintests
Is noteworthy for integration: No

Modified Paths:
--------------
/private/flex/sdk/branches/hero_private/frameworks/projects/spark/defaults.css

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274884 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -69,6 +69,11 @@ DataGrid
     skinClass: ClassReference("spark.skins.spark.DataGridSkin");
 }
 
+DefaultColumnHeaderRenderer
+{
+    cornerRadius: 0;
+}
+
 DropDownList
 {
     dropShadowVisible: true;
